Got the app and dest directories workin in a consistent way..

--- a/client/app/html/import_main_css_and_js.html
+++ b/client/app/html/import_main_css_and_js.html
@@ -29,28 +29,28 @@
     <!-- Start CSS Imports here -->
     <!-- the following line is used by grunt-usemin to detect which css it should combine -->
     <!-- build:css /styles/combined.min.css-->
-    <link rel="stylesheet" href="/app/styles/reset.css">
-    <link rel="stylesheet" href="/app/styles/960.css">
-    <link rel="stylesheet" href="/app/styles/jquery-ui-1.10.3.custom.css">
-    <link rel="stylesheet" href="/app/styles/jquery.fancybox-2.1.5.css">
-    <link rel="stylesheet" href="/app/styles/chatbox.css">
-    <link rel="stylesheet" href="/app/styles/site_common.css">
-    <link rel="stylesheet" href="/app/styles/user_main.css">
-    <link rel="stylesheet" href="/app/styles/menubar_common.css">
-    <link rel="stylesheet" href="/app/proprietary/styles/Discrete_common.css">
+    <link rel="stylesheet" href="/styles/reset.css">
+    <link rel="stylesheet" href="/styles/960.css">
+    <link rel="stylesheet" href="/styles/jquery-ui-1.10.3.custom.css">
+    <link rel="stylesheet" href="/styles/jquery.fancybox-2.1.5.css">
+    <link rel="stylesheet" href="/styles/chatbox.css">
+    <link rel="stylesheet" href="/styles/site_common.css">
+    <link rel="stylesheet" href="/styles/user_main.css">
+    <link rel="stylesheet" href="/styles/menubar_common.css">
+    <link rel="stylesheet" href="/proprietary/styles/Discrete_common.css">
 
-    <link rel="stylesheet" href="/app/styles/css/proprietary_common.css">
+    <link rel="stylesheet" href="/styles/css/proprietary_common.css">
 
     <!-- endbuild -->
 
     {% if build_name == 'discrete_build' or build_name == 'lesbian_build' or build_name == 'swinger_build' or build_name == 'single_build' %}
-        <link rel="stylesheet" href="/app/proprietary/styles/css/discrete_build_menubar.css">
+        <link rel="stylesheet" href="/proprietary/styles/css/discrete_build_menubar.css">
 
     {% else %}
         {% if build_name == "language_build" or build_name == "mature_build" %}
-            <link rel="stylesheet" href="/app/proprietary/styles/language_build_menubar.css">
+            <link rel="stylesheet" href="/proprietary/styles/language_build_menubar.css">
         {% else %}
-            <link rel="stylesheet" href="/app/proprietary/styles/{{ build_name }}_menubar.css">
+            <link rel="stylesheet" href="/proprietary/styles/{{ build_name }}_menubar.css">
         {% endif %}
 
     {% endif %}
@@ -67,15 +67,15 @@
 
     <!-- the following line is used by grunt-usemin to detect which css it should combine -->
     <!-- build:js /scripts/combined.min.js-->
-    <script type="text/javascript" src="/app/scripts/stacktrace.js"></script>
-    <script type="text/javascript" src="/app/scripts/rometo-utils.js"></script>
-    <script type="text/javascript" src="/app/scripts/jquery.json.js"></script>
-    <script type="text/javascript" src="/app/scripts/jquery.idle.js"></script>
-    <script type="text/javascript" src="/app/scripts/jquery.fancybox-2.1.5.js"></script>
-    <script type="text/javascript" src="/app/scripts/jquery.form.js"></script>
-    <script type="text/javascript" src="/app/scripts/chatbox.js"></script>
-    <script type="text/javascript" src="/app/scripts/channel-utils.js"></script>
-    <script type="text/javascript" src="/app/scripts/chat.js"></script>
+    <script type="text/javascript" src="/scripts/stacktrace.js"></script>
+    <script type="text/javascript" src="/scripts/rometo-utils.js"></script>
+    <script type="text/javascript" src="/scripts/jquery.json.js"></script>
+    <script type="text/javascript" src="/scripts/jquery.idle.js"></script>
+    <script type="text/javascript" src="/scripts/jquery.fancybox-2.1.5.js"></script>
+    <script type="text/javascript" src="/scripts/jquery.form.js"></script>
+    <script type="text/javascript" src="/scripts/chatbox.js"></script>
+    <script type="text/javascript" src="/scripts/channel-utils.js"></script>
+    <script type="text/javascript" src="/scripts/chat.js"></script>
     <!-- endbuild -->
 
 
