--- a/client/app/html/user_main_helpers/photos.html
+++ b/client/app/html/user_main_helpers/photos.html
@@ -175,7 +175,7 @@
     </div>
 
     <div class="grid_5 alpha omega" id="id-show-ajax-loader">
-        <img src="/{{ live_static_dir }}/img/small-ajax-loader.gif" align=middle alt=''>
+        <img src="/{{ live_static_dir }}/images/small-ajax-loader.gif" align=middle alt=''>
     </div>
 
 
