Updated all images to use the new /image directory for image retreival.

--- a/client/app/html/common_helpers/footer.html
+++ b/client/app/html/common_helpers/footer.html
@@ -24,7 +24,7 @@
 <!-- Removing this link will be considered a violation of the licensing agreement. -->
 <div class="cl-center-text" id="id-lexalink_container">
     <br>
-    <a href="http://www.lexalink.com"><img src="/{{ live_static_dir }}/images/LexaLink_button.png"
+    <a href="http://www.lexalink.com"><img src="/images/LexaLink_button.png"
      alt="Powered by the LexaLInk social network and dating platform for the Google App Engine"></a>
     <br><br>
 </div>
