--- a/client/app/html/common_wrapper.html
+++ b/client/app/html/common_wrapper.html
@@ -69,9 +69,9 @@
 
     <!-- The following "link rel" code is to help facebook pick the correct image when someon Likes the page -->
     {% if proprietary_static_dir_exists %}
-    <link rel="image_src" href="/{{ live_proprietary_static_dir }}/images/{{build_name}}/{{ build_name }}.png">
+    <link rel="image_src" href="/proprietary/images/{{build_name}}/{{ build_name }}.png">
     {% else %}
-    <link rel="image_src" href="/{{ live_static_dir }}/images/Default/default_logo.png">
+    <link rel="image_src" href="/images/default_build/default_logo.png">
     {% endif %}
 
     <title>{{  meta_info.page_title }}</title>
