--- a/client/app/html/main_container.html
+++ b/client/app/html/main_container.html
@@ -82,7 +82,7 @@ $(document).ready(function() {
                     </div>
                 {% endif %}
 
-                {% ifequal live_static_dir "rs/static" %}
+                {% ifequal live_static_dir "client/app" %}
                     <div class="cl-color-text cl-center-text">
                         <strong>Accessing non time-stamped static files - this is not suitable for live version!!!!</strong>
                     </div>
