--- a/client/app/html/user_main_helpers/purchase_buttons.html
+++ b/client/app/html/user_main_helpers/purchase_buttons.html
@@ -4,10 +4,10 @@
 
 <div class="cl-payment_tabs">
   <ul>
-    <li><a href="#credit-card-tab"><img src="/{{ live_static_dir }}/images/payment_images/paypal_credit_187x47.png"></a></li>
-      <li><a href="#paypal-tab"><img src="/{{ live_static_dir }}/images/payment_images/paypal_logo_75x47.png"></a></li>
+    <li><a href="#credit-card-tab"><img src="/images/payment_images/paypal_credit_187x47.png"></a></li>
+      <li><a href="#paypal-tab"><img src="/images/payment_images/paypal_logo_75x47.png"></a></li>
       {% if fortumo_data.show_fortumo_options %}
-        <li><a href="#fortumo-tab"><img src="/{{ live_static_dir }}/images/payment_images/sms_pay.png"></a></li>
+        <li><a href="#fortumo-tab"><img src="/images/payment_images/sms_pay.png"></a></li>
       {% endif %}
   </ul>
   <div id="credit-card-tab">
