--- a/client/app/html/user_main_helpers/status.html
+++ b/client/app/html/user_main_helpers/status.html
@@ -35,7 +35,7 @@
         // handle the button submission, and re-direct to the correct pages
         handle_submit_and_cancel_buttons("status", "{{ primary_user_profile_data_fields.owner_uid }}");
         // load the edit fields after "edit" link has been clicked.
-        handle_link_for_edit("status", "status", "{{ primary_user_profile_data_fields.owner_uid }}", "{{ live_static_dir }}");
+        handle_link_for_edit("status", "status", "{{ primary_user_profile_data_fields.owner_uid }}");
     });
 
 </script>
