Fixed translation strings that were breaking the html minifier.

--- a/client/app/html/login_helpers/login.html
+++ b/client/app/html/login_helpers/login.html
@@ -40,7 +40,7 @@
                     <!-- need to define two boxes for the password - but only one will be shown at a time -
            required for showing text prompt in the input box -->
                     <input type="text" class="cl-gray-letters-text-prompt cl-narrow-textinput-width-px cl-textinput-font-size"
-                           value='{% trans "password" %}' id="id-password-prompt"
+                           value="{% trans 'password' %}" id="id-password-prompt"
                            name="password-prompt" maxlength=50>
                     <input type="password" class="cl-narrow-textinput-width-px cl-textinput-font-size" id="id-password-input"
                            name="password" maxlength=50>
