--- a/client/app/html/user_main_helpers/chat.html
+++ b/client/app/html/user_main_helpers/chat.html
@@ -44,7 +44,7 @@
                id="id-create-new-group-input" class="cl-standard-textinput-width-px"><br>
 
         <table> <tbody><tr>
-              <td><input type="button" value='{% trans "Create a group" %}' id="id-submit-create_new_group" class="cl-submit"></td>
+              <td><input type="button" value="{% trans 'Create a group' %}" id="id-submit-create_new_group" class="cl-submit"></td>
         </tr> </tbody></table>
         </form>
     </div>
