--- a/client/app/html/user_main_helpers/photos.html
+++ b/client/app/html/user_main_helpers/photos.html
@@ -7,7 +7,7 @@
 
     <div id="id-show_photo_rules_popup" style="display:none;">
         {% include "user_main_helpers/photo_rules.html" %}
-        <br><br><input type="button" class="cl-submit" id="id-show_photo_rules_popup-close" alt="" value='{% trans "I understand and accept these rules" %}'>
+        <br><br><input type="button" class="cl-submit" id="id-show_photo_rules_popup-close" alt="" value="{% trans 'I understand and accept these rules' %}">
     </div>
 
     <script type="text/javascript">
@@ -181,7 +181,7 @@
 
     <div class="grid_2 alpha omega">&nbsp;</div>
     <div class="grid_2 alpha omega">
-        <input type=button class="cl-submit" id="id-submit-photo_options" alt="" value='{% trans "Save changes" %}'>
+        <input type=button class="cl-submit" id="id-submit-photo_options" alt="" value="{% trans 'Save changes' %}">
         <br><br>
     </div>
 
