--- a/client/app/html/user_main_helpers/fortumo_purchase_form.html
+++ b/client/app/html/user_main_helpers/fortumo_purchase_form.html
@@ -8,7 +8,7 @@
         <p>
         {{ fortumo_data.radio_options|safe }}
         <p>
-        <input class="cl-paypal-purchase cl-fortumo_purchase" type="submit" name="submit" value='{% trans "Purchase" %}'>
+        <input class="cl-paypal-purchase cl-fortumo_purchase" type="submit" name="submit" value="{% trans 'Purchase' %}">
     </form>
 
 
