Fixed some {% trans %} blocks that were causing errors due to the grunt build scripts

--- a/client/app/html/login_helpers/login.html
+++ b/client/app/html/login_helpers/login.html
@@ -35,7 +35,7 @@
 
                     <input type="text"
                        class="defaultText cl-gray-letters-text-prompt cl-nick-textinput-width-px cl-textinput-font-size"
-                       title='{% trans "username or email"%}'
+                       title="{% trans 'username or email'%}"
                        id="id-login_fields-username_email" name="username_email" maxlength=50>
                     <!-- need to define two boxes for the password - but only one will be shown at a time -
            required for showing text prompt in the input box -->
@@ -45,7 +45,7 @@
                     <input type="password" class="cl-narrow-textinput-width-px cl-textinput-font-size" id="id-password-input"
                            name="password" maxlength=50>
                     <input id="id-submit-login-button" type="submit" class="cl-small-login-button"
-                           value='{% trans "Enter" %}!'>
+                           value="{% trans 'Enter' %}!">
             </div>
         </div>
     </div>
