removed "live_static_dir" from all templates - is no longer required.

--- a/client/app/html/common_wrapper.html
+++ b/client/app/html/common_wrapper.html
@@ -67,7 +67,7 @@
     <meta name = "keywords" content="{{  meta_info.keywords_description }}">
     <meta name="robots" content="{{ meta_info.web_crawler_access }}">
 
-    <!-- The following "link rel" code is to help facebook pick the correct image when someon Likes the page -->
+    <!-- The following "link rel" code is to help facebook pick the correct image when someone Likes the page -->
     {% if proprietary_static_dir_exists %}
     <link rel="image_src" href="/proprietary/images/{{build_name}}/{{ build_name }}.png">
     {% else %}
