--- a/client/app/html/login_helpers/registration.html
+++ b/client/app/html/login_helpers/registration.html
@@ -109,7 +109,7 @@
         $("#id-signup_fields-region").hide();
         $("#id-signup_fields-sub_region").hide();
 
-        load_location_settings_on_change(id_prefix, default_text, true, "{{ live_static_dir }}")
+        load_location_settings_on_change(id_prefix, default_text, true)
     }
 
 
