Manually versioned images will now never be cached in browsers - we force a new upload every time we update the code to a new version.

--- a/client/app/html/common_wrapper.html
+++ b/client/app/html/common_wrapper.html
@@ -53,6 +53,7 @@
             var debugging_enabled = false;
         {% endif %}
 
+        var manually_versioned_images_dir = "{{ MANUALLY_VERSIONED_IMAGES_DIR }}";
 
     </script>
     <!--[if lt IE 8]>
