--- a/client/app/html/user_main_helpers/photos.html
+++ b/client/app/html/user_main_helpers/photos.html
@@ -175,7 +175,7 @@
     </div>
 
     <div class="grid_5 alpha omega" id="id-show-ajax-loader">
-        <img src="/images/unversioned_images/small-ajax-loader.gif" align=middle alt=''>
+        <img src="{{ MANUALLY_VERSIONED_IMAGES_DIR }}/small-ajax-loader.gif" align=middle alt=''>
     </div>
 
 
