More code cleanup to make pass jshint.

--- a/client/app/html/login_helpers/registration.html
+++ b/client/app/html/login_helpers/registration.html
@@ -185,7 +185,7 @@
                 return false;
             });
         } catch(err) {
-            report_try_catch_error( err, "handle_verification_code_input", "error");
+            reportTryCatchError( err, "handle_verification_code_input", "error");
         }
     }
 
