--- a/client/app/html/login_helpers/login.html
+++ b/client/app/html/login_helpers/login.html
@@ -114,7 +114,7 @@
                     } else {
                         var readable_object = JSON.stringify(post_response);
                         var error_html =  "handle_user_registration_form - unknown json response object: " + readable_object
-                        report_ajax_error("NA", error_html, "handle_registered_login_form - success", "error");
+                        reportAjaxError("NA", error_html, "handle_registered_login_form - success", "error");
                         show_fields_errors("login_fields", [], error_html, location_where_to_show_errors);
                     }
                 },
@@ -126,7 +126,7 @@
                     } else {
                         error_html = "handle_registered_login_form - unknown error";
                     }
-                    report_ajax_error(textStatus, errorThrown, "handle_registered_login_form - error", "error");
+                    reportAjaxError(textStatus, errorThrown, "handle_registered_login_form - error", "error");
                     show_fields_errors("login_fields", [], error_html, location_where_to_show_errors);
 
                 },
