--- a/client/app/html/common_wrapper.html
+++ b/client/app/html/common_wrapper.html
@@ -37,7 +37,7 @@
         // check if we are running an old version of IE (before version 8.0)
         var lt_ie8 = false;
 
-        var remove_chatboxes = false;
+        var removeChatboxes = false;
 
         var href = location.href;
         var pathname = location.pathname;
