--- a/client/app/html/user_main_helpers/presence_and_chat.html
+++ b/client/app/html/user_main_helpers/presence_and_chat.html
@@ -33,7 +33,7 @@
 <script language="javascript" type="text/javascript">
 
 
-    var template_presence_vars =  function() {
+    var templatePresenceVars =  function() {
         var obj = {};
         obj.ownerUid = "{{ primary_user_presentation_data_fields.owner_uid }}";
         obj.username =  "{{ primary_user_presentation_data_fields.username }}";
@@ -49,18 +49,18 @@
 
     if ("{{primary_user_presentation_data_fields.remove_chatboxes }}" === "yes") {
         // some pages should have the chatboxes removed - such as the logout screen
-        remove_chatboxes = true;
+        removeChatboxes = true;
     }
 
 </script>
 
     {% if primary_user_presentation_data_fields.client_paid_status %}
     <script type="text/javascript">
-        js_client_is_vip = true;
+        jsClientIsVip = true;
     </script>
     {% else %}
     <script type="text/javascript">
-        js_client_is_vip = false;
+        jsClientIsVip = false;
     </script>
     {% endif %}
         
@@ -68,8 +68,8 @@
     // we can now launch the chatboxes, since before this point we didn't know if we were running a browser for which
     // we have disabled chatboxes.
     $(document).ready(function() {
-        if (!remove_chatboxes) {
-            launch_chatboxes();
+        if (!removeChatboxes) {
+            launchChatboxes();
         }
     });
 </script>
