Replace type_of_conversation with camelCase

--- a/client/app/html/user_main_helpers/chat.html
+++ b/client/app/html/user_main_helpers/chat.html
@@ -40,7 +40,7 @@
         {% trans "Please enter the group name to create and join:" %}
         <br><br>
         <form id="id-create_new_group-form" method="POST">
-        <input type="text" maxlength="16" name="create_new_group_name"
+        <input type="text" maxlength="16" name="createNewGroupName"
                id="id-create-new-group-input" class="cl-standard-textinput-width-px"><br>
 
         <table> <tbody><tr>
