More jshint cleanup

--- a/client/app/html/common_wrapper.html
+++ b/client/app/html/common_wrapper.html
@@ -35,7 +35,7 @@
     <script type="text/javascript">
 
         // check if we are running an old version of IE (before version 8.0)
-        var lt_ie8 = false;
+        var ltIE8 = false;
 
         var removeChatboxes = false;
 
@@ -58,7 +58,7 @@
     </script>
     <!--[if lt IE 8]>
       <script type="text/javascript">
-        var lt_ie8=true;
+        var ltIE8=true;
       </script>
     <![endif]-->
 
