--- a/client/app/html/user_main_helpers/photos.html
+++ b/client/app/html/user_main_helpers/photos.html
@@ -130,7 +130,7 @@
                 }
             });
         });
-        mouseover_button_handler($(submit_button_id));
+        mouseoverButtonHandler($(submit_button_id));
     });
 </script>
 
