--- a/client/app/html/user_main_helpers/presence_and_chat.html
+++ b/client/app/html/user_main_helpers/presence_and_chat.html
@@ -37,12 +37,12 @@
         var obj = {};
         obj.ownerUid = "{{ primary_user_presentation_data_fields.owner_uid }}";
         obj.username =  "{{ primary_user_presentation_data_fields.username }}";
-        obj.max_active_polling_delay = "{{ primary_user_presentation_data_fields.user_presence_delay_constants.MAX_ACTIVE_POLLING_DELAY_IN_CLIENT }}";
-        obj.idle_polling_delay = "{{ primary_user_presentation_data_fields.user_presence_delay_constants.IDLE_POLLING_DELAY_IN_CLIENT }}";
-        obj.away_polling_delay = "{{ primary_user_presentation_data_fields.user_presence_delay_constants.AWAY_POLLING_DELAY_IN_CLIENT }}";
-        obj.inactivity_time_before_idle = "{{ primary_user_presentation_data_fields.user_presence_delay_constants.INACTIVITY_TIME_BEFORE_IDLE }}";
-        obj.inactivity_time_before_away = "{{ primary_user_presentation_data_fields.user_presence_delay_constants.INACTIVITY_TIME_BEFORE_AWAY }}";
-        obj.chat_is_disabled = "{{ primary_user_presentation_data_fields.chat_is_disabled }}";
+        obj.maxActivePollingDelay = "{{ primary_user_presentation_data_fields.user_presence_delay_constants.MAX_ACTIVE_POLLING_DELAY_IN_CLIENT }}";
+        obj.idlePollingDelay = "{{ primary_user_presentation_data_fields.user_presence_delay_constants.IDLE_POLLING_DELAY_IN_CLIENT }}";
+        obj.awayPollingDelay = "{{ primary_user_presentation_data_fields.user_presence_delay_constants.AWAY_POLLING_DELAY_IN_CLIENT }}";
+        obj.inactivityTimeBeforeIdle = "{{ primary_user_presentation_data_fields.user_presence_delay_constants.INACTIVITY_TIME_BEFORE_IDLE }}";
+        obj.inactivityTimeBeforeAway = "{{ primary_user_presentation_data_fields.user_presence_delay_constants.INACTIVITY_TIME_BEFORE_AWAY }}";
+        obj.chatIsDisabled = "{{ primary_user_presentation_data_fields.chat_is_disabled }}";
         obj.language = "{{ request.LANGUAGE_CODE }}";
         return obj;
     }();
