moved non internal source code into the /vendor directory to prevent jshint from analysing it.

--- a/client/app/html/import_main_css_and_js.html
+++ b/client/app/html/import_main_css_and_js.html
@@ -50,12 +50,12 @@
 
     <!-- the following line is used by grunt-usemin to detect which css it should combine this block into -->
     <!-- build:js /scripts/combined.min.js-->
-    <script type="text/javascript" src="/scripts/stacktrace.js"></script>
+    <script type="text/javascript" src="/scripts/vendor/stacktrace.js"></script>
     <script type="text/javascript" src="/scripts/rometo-utils.js"></script>
-    <script type="text/javascript" src="/scripts/jquery.json.js"></script>
-    <script type="text/javascript" src="/scripts/jquery.idle.js"></script>
-    <script type="text/javascript" src="/scripts/jquery.fancybox-2.1.5.js"></script>
-    <script type="text/javascript" src="/scripts/jquery.form.js"></script>
+    <script type="text/javascript" src="/scripts/vendor/jquery.json.js"></script>
+    <script type="text/javascript" src="/scripts/vendor/jquery.idle.js"></script>
+    <script type="text/javascript" src="/scripts/vendor/jquery.fancybox-2.1.5.js"></script>
+    <script type="text/javascript" src="/scripts/vendor/jquery.form.js"></script>
     <script type="text/javascript" src="/scripts/chatbox.js"></script>
     <script type="text/javascript" src="/scripts/channel-utils.js"></script>
     <script type="text/javascript" src="/scripts/chat.js"></script>
