--- a/client/app/html/login_helpers/registration.html
+++ b/client/app/html/login_helpers/registration.html
@@ -195,7 +195,7 @@
 
         handle_location_changes();
         internal_country_code = "{{ http_country_code }}"  + ",,";
-        rs_set_selector_to_value('#id-signup_fields-country', internal_country_code);
+        rsSetSelectorToValue('#id-signup_fields-country', internal_country_code);
 
         // the main registration page will show the error dialog in a different location than the "popup"
         // registration dialog box.
